# zengpingzhou

image_fusion/: CMakeLists.txt  README.md  main.cpp  rc.qrc  zh_CN.ts
image_fusion/FileOperation/: fileoperation.cpp  fileoperation.h
image_fusion/FusionAlgorithm/: fusion.cpp  fusion.h
image_fusion/UI/: menu.cpp  menu.h  ui.cpp  ui.h
image_fusion/res/: logo.rc  zh_CN.qm
